@@ -20,7 +20,7 @@
 			<td><input type="checkbox" id="OregonScientific" name="OregonScientific">&nbsp;<label for="OregonScientific">Oregon Scientific</label></td>
 		</tr>
 		<tr>
-			<td><input type="checkbox" id="RSL" name="rfu4">&nbsp;<label for="rfu4">RFU 4</label></td>
+			<td><input type="checkbox" id="RSL" name="RSL">&nbsp;<label for="rfu4">Conrad RSL</label></td>
 			<td><input type="checkbox" id="FS20" name="FS20">&nbsp;<label for="FS20">FS20</label></td>
 			<td><input type="checkbox" id="Meiantech" name="Meiantech">&nbsp;<label for="Meiantech">Meiantech</label></td>
 		</tr>
@@ -586,7 +586,7 @@ function EditRFXCOMMode(idx,name,Mode1,Mode2,Mode3,Mode4,Mode5)
 	$('#hardwarecontent #Rubicson').prop('checked',((Mode3 & 0x02)!=0));
 	$('#hardwarecontent #FineOffsetViking').prop('checked',((Mode3 & 0x04)!=0));
 	$('#hardwarecontent #Lighting4').prop('checked',((Mode3 & 0x08)!=0));
-	$('#hardwarecontent #rfu4').prop('checked',((Mode3 & 0x10)!=0));
+	$('#hardwarecontent #RSL').prop('checked',((Mode3 & 0x10)!=0));
 	$('#hardwarecontent #rfu5').prop('checked',((Mode3 & 0x20)!=0));
 	$('#hardwarecontent #rfu6').prop('checked',((Mode3 & 0x40)!=0));
 
@@ -613,7 +613,7 @@ function EditRFXCOMMode(idx,name,Mode1,Mode2,Mode3,Mode4,Mode5)
 		$('#hardwarecontent #Rubicson').prop('checked',false);
 		$('#hardwarecontent #FineOffsetViking').prop('checked',false);
 		$('#hardwarecontent #Lighting4').prop('checked',false);
-		$('#hardwarecontent #rfu4').prop('checked',false);
+		$('#hardwarecontent #RSL').prop('checked',false);
 		$('#hardwarecontent #rfu5').prop('checked',false);
 		$('#hardwarecontent #rfu6').prop('checked',false);
 	});
